UCL-546 | fix toast position to center aligned

--- a/src/components/Notifications/Alert/AlertContainer/AlertContainer.module.scss
+++ b/src/components/Notifications/Alert/AlertContainer/AlertContainer.module.scss
@@ -50,7 +50,7 @@
     width: initial;
 
     &.center {
-      left: calc(50% - 18.75rem);
+      left: calc(50% - 12.5rem);
     }
   }
 }
